fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
 
   /* Track */
   ::-webkit-scrollbar-track {
-    background: #000202;
+    background: #147373;
   }
 
   /* Handle */
